--- a/T01.ipynb
+++ b/T01.ipynb
@@ -50,7 +50,8 @@
         "— Input Verilog code\n",
         "4. Create Simulation file\n",
         "— Input Testbench Code, set simulation file as top\n",
-        "5. Run Simulation"
+        "5. Run Simulation\n",
+        "6. Program device"
       ],
       "metadata": {
         "id": "nfgstORV7rt4"
@@ -214,13 +215,16 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Lessons learned:\n",
+        "1. Check email more often\n",
+        "2. Make sure that there are no ambiguous inputs (in constraint file, in simulation files)\n",
+        "3. Set enough time to be able to see the outputs on the simulations"
+      ],
       "metadata": {
-        "id": "aV4HJwGH7yUU"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "uBddYNFv8W7V"
+      }
     }
   ]
 }
