--- a/T01.ipynb
+++ b/T01.ipynb
@@ -35,13 +35,13 @@
       "metadata": {
         "id": "8E2SPKOf39kN"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Design steps:\n",
+        "# Design steps:\n",
         "1. Create a new Vivado Project\n",
         "— Use Basys3 Board\n",
         "2. Create Constraint file\n",
@@ -60,7 +60,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Verilog Code"
+        "# Verilog Code:"
       ],
       "metadata": {
         "id": "MGeMKFEB75Ob"
@@ -91,7 +91,7 @@
         "id": "cRpgCrIO55D7",
         "outputId": "21531c18-2de1-4141-d3e5-c933affd7f51"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -107,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "gFyhY8uL0USl",
         "colab": {
@@ -161,6 +161,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Simulation"
+      ],
+      "metadata": {
+        "id": "7daxQTqY-o7w"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "%%waveform tb1.vcd\n",
@@ -175,9 +184,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 164
         },
-        "outputId": "b3fe8f22-1ab9-45dc-8f05-9acc29b1dc58"
+        "outputId": "db608bc9-42ef-4ee6-fea0-86005c521ef1"
       },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -203,12 +212,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Challenges:\n",
+        "# Challenges:\n",
         "1. Downloading Vivado (large programme size + updating parts and boards when making first project)\n",
+        "2. Hindrance of installation by anti-virus softwares such as AVG\n",
         "2. Setting the correct switches and LEDs in the constraint file\n",
         "3. Ensuring that the Verilog code works by testing on google colab, which refused to work sometimes, even when the code was correct and working earlier\n",
         "4. Setting the right file as top (empty files made the programme confused)\n",
-        "5. Lack of USB to micro-b cables"
+        "5. Lack of USB to micro-b cables\n",
+        "6. Use the constraint file from the Github at Basys-3-Master.xdc"
       ],
       "metadata": {
         "id": "icVJ1bWF7xxq"
@@ -217,10 +228,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Lessons learned:\n",
+        "# Lessons learned:\n",
         "1. Check email more often\n",
         "2. Make sure that there are no ambiguous inputs (in constraint file, in simulation files)\n",
-        "3. Set enough time to be able to see the outputs on the simulations"
+        "3. Set enough time to be able to see the outputs on the simulations\n"
       ],
       "metadata": {
         "id": "uBddYNFv8W7V"
