--- a/T01.ipynb
+++ b/T01.ipynb
@@ -186,7 +186,7 @@
         },
         "outputId": "db608bc9-42ef-4ee6-fea0-86005c521ef1"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -230,8 +230,9 @@
       "source": [
         "# Lessons learned:\n",
         "1. Check email more often\n",
-        "2. Make sure that there are no ambiguous inputs (in constraint file, in simulation files)\n",
-        "3. Set enough time to be able to see the outputs on the simulations\n"
+        "2. Deactivate security software to allow program to run properly\n",
+        "3. Make sure that there are no ambiguous inputs (in constraint file, in simulation files)\n",
+        "4. Set enough time to be able to see the outputs on the simulations\n"
       ],
       "metadata": {
         "id": "uBddYNFv8W7V"
