--- a/T01.ipynb
+++ b/T01.ipynb
@@ -41,6 +41,55 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#Objectives:"
+      ],
+      "metadata": {
+        "id": "b7u23vw1tgUS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Design and implement basic logic gates (NOT, AND, OR, XOR, NAND, NOR, XNOR) on the Basys 3 FPGA board using Verilog. Use switches sw[0] and sw[1] as inputs and LEDs led[7:0] to display the output of each gate. Demonstrate the input-output relationship using a truth table."
+      ],
+      "metadata": {
+        "id": "eRs6M8NUtjnS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Features:"
+      ],
+      "metadata": {
+        "id": "gpGT3SawtsZJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "1. **Inputs**:  \n",
+        "   - `sw[0]` (Input A)  \n",
+        "   - `sw[1]` (Input B)  \n",
+        "2. **Outputs**:  \n",
+        "   - Use `led[0]` to `led[7]` to represent the output of each logic gate (see table below).  \n",
+        "3. **Truth Table**:\n",
+        "\n",
+        "| sw[1] (B) | sw[0] (A) | NOT A (led[0]) | BUF B (led[1]) | AND (led[2]) | OR (led[3]) | NOR (led[4]) | NAND (led[5]) | XOR (led[6]) | XNOR (led[7]) |\n",
+        "|:---------:|:---------:|:--------------:|:--------------:|:-----------:|:----------:|:-----------:|:------------:|:-----------:|:------------:|\n",
+        "| 0         | 0         | 1              | 0              | 0           | 0          | 1           | 1            | 0           | 1            |\n",
+        "| 0         | 1         | 0              | 0              | 0           | 1          | 0           | 1            | 1           | 0            |\n",
+        "| 1         | 0         | 1              | 1              | 0           | 1          | 0           | 1            | 1           | 0            |\n",
+        "| 1         | 1         | 0              | 1              | 1           | 1          | 0           | 0            | 0           | 1            |"
+      ],
+      "metadata": {
+        "id": "NKYPNj8utuFn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Design steps:\n",
         "1. Create a new Vivado Project\n",
         "— Use Basys3 Board\n",
@@ -219,7 +268,8 @@
         "3. Ensuring that the Verilog code works by testing on google colab, which refused to work sometimes, even when the code was correct and working earlier\n",
         "4. Setting the right file as top (empty files made the programme confused)\n",
         "5. Lack of USB to micro-b cables\n",
-        "6. Use the constraint file from the Github at Basys-3-Master.xdc"
+        "6. Use the constraint file from the Github at Basys-3-Master.xdc\n",
+        "7. Understanding the difference between coding Verilog in Colab and Vivado, as functions such as %%verilog and $dumpfile are not used in Vivado"
       ],
       "metadata": {
         "id": "icVJ1bWF7xxq"
